--- a/src/app/views/manage-auth/components/apis/api-list/api-list.component.html
+++ b/src/app/views/manage-auth/components/apis/api-list/api-list.component.html
@@ -5,7 +5,9 @@
   <c-row class="fade show">
     <c-col xs>
       <c-card class="mb-4">
-        <c-card-header></c-card-header>
+        <c-card-header>
+
+        </c-card-header>
         <c-card-body>
           <table *ngIf="this.list$ | async as viewModel; else showNotFoundContent" [hover]="true" [responsive]="true"
             [striped]="true" align="middle" cTable class="mb-0 border">
@@ -23,7 +25,7 @@
             </thead>
             <tbody>
               <tr *ngFor="let api of viewModel.data; index as i" style="cursor: pointer;"
-                (click)="this.toggleLiveDemo(api)">
+                (click)="this.onUpdate(api)">
                 <td class="text-center">
                   {{ i + 1 }}
                 </td>
